[package]
name = "maxwell"
version = "0.1.0"
authors = ["cui <chuihairu@gmail.com>"]
license = "MIT"
homepage = "https://github.com/cuihairu/maxwell"
repository = "https://github.com/cuihairu/maxwell"
documentation = "https://github.com/cuihairu/maxwell/docs"
description = ""
keywords = ["crypto","mass"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
